@@ -258,6 +258,9 @@ class Mnemo_Application extends Horde_Registry_Application
                         $note['memolist_id'],
                         $nore['uid']
                     );
+                    if ($note['body'] instanceof Mnemo_Exception) {
+                        $note['body'] = $note['body']->getMessage();
+                    }
                     $data[] = $note;
                 }
 
