@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [jan] Fix exporting bodies of encrypted notes (Bug #11960).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -981,7 +981,7 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [jan] Fix exporting bodies of encrypted notes (Bug #11960).
    </notes>
   </release>
  </changelog>
